--- a/app/templates/survey_details.html
+++ b/app/templates/survey_details.html
@@ -146,6 +146,18 @@
                 </div>
             </div>
         </div>
+
+        <!-- Action Buttons -->
+        <div class="flex justify-between pt-6">
+            <a href="/surveys" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">Back to Surveys</a>
+            <form action="/survey/{{ survey.id }}/delete" method="POST" class="inline">
+                <button type="submit" 
+                        class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700"
+                        onclick="return confirm('Are you sure you want to delete this survey?')">
+                    Delete Survey
+                </button>
+            </form>
+        </div>
     </main>
 </body>
 </html>
