--- a/app/templates/surveys.html
+++ b/app/templates/surveys.html
@@ -61,10 +61,19 @@
                                     {{ survey.team_status }}
                                 </td>
                                 <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                                    <a href="/survey/{{ survey.id }}/details" 
-                                       class="btn btn-primary text-sm">
-                                        View Details
-                                    </a>
+                                    <div class="flex space-x-2 justify-end">
+                                        <a href="/survey/{{ survey.id }}/details" 
+                                           class="btn btn-primary text-sm">
+                                            View Details
+                                        </a>
+                                        <form action="/survey/{{ survey.id }}/delete" method="POST" class="inline">
+                                            <button type="submit" 
+                                                    class="btn bg-red-600 hover:bg-red-700 focus:ring-red-500 text-sm text-white"
+                                                    onclick="return confirm('Are you sure you want to delete this survey?')">
+                                                Delete
+                                            </button>
+                                        </form>
+                                    </div>
                                 </td>
                             </tr>
                             {% endfor %}
