--- a/app/templates/surveys.html
+++ b/app/templates/surveys.html
@@ -40,9 +40,7 @@
                                 <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Employee</th>
                                 <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Manager</th>
                                 <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Team Status</th>
-                                <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
-                                    <span class="sr-only">Actions</span>
-                                </th>
+                                <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6 text-right">Actions</th>
                             </tr>
                         </thead>
                         <tbody class="divide-y divide-gray-200">
@@ -61,14 +59,14 @@
                                     {{ survey.team_status }}
                                 </td>
                                 <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                                    <div class="flex space-x-2 justify-end">
+                                    <div class="flex justify-end space-x-2">
                                         <a href="/survey/{{ survey.id }}/details" 
-                                           class="btn btn-primary text-sm">
+                                           class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
                                             View Details
                                         </a>
                                         <form action="/survey/{{ survey.id }}/delete" method="POST" class="inline">
                                             <button type="submit" 
-                                                    class="btn bg-red-600 hover:bg-red-700 focus:ring-red-500 text-sm text-white"
+                                                    class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700"
                                                     onclick="return confirm('Are you sure you want to delete this survey?')">
                                                 Delete
                                             </button>
